# calculator

./: .gitignore  .pypirc  LICENSE  README.md  calcular.py  error_testing.py  pyproject.toml  setup.py
calculator/: __init__.py  calculator.py  calculator_release.py
calculator/extensions/: __init__.py
calculator/extensions/errors/: __init__.py  error_handler.py
calculator_terminal/: calculator.py
calculator_terminal/extensions/: operaciones.py
extensions/errors/: error_handler.py
