[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "calculator_terminal"
version = "1.1.1"
authors = [
  { name="Developer Anonymous", email="developeranonymous_buss@hotmail.com" },
]
description = "La mejor calculadora para tu proyecto de Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Developer-Anony/calculator"
"Bug Tracker" = "https://github.com/Developer-Anony/calculator/issues"